--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -16,6 +16,15 @@
     grid-template-columns: repeat(2,1fr);
     gap: 25px;
 }
+
+@media(max-width:768px){
+    .footerlinks{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+}
 @media(max-width:568px){
     .sectionone__images{
         grid-template-columns: repeat(1,1fr);
